--- a/kadai_008/kadai_008.ipynb
+++ b/kadai_008/kadai_008.ipynb
@@ -16,25 +16,25 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9Q5Fr6LW7xNV",
-        "outputId": "2e4af036-6255-4c1c-c17b-1d630f71655b"
+        "outputId": "812d5499-e818-4085-c014-80b54cf34211"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "FizzBuzz\n"
+            "44\n"
           ]
         }
       ],
       "source": [
-        "var = 15\n",
+        "var = 44\n",
         "\n",
         "if var % 3 == 0 and var % 5 == 0:\n",
         "  print(\"FizzBuzz\")\n",
@@ -43,7 +43,10 @@
         "  print(\"Fizz\")\n",
         "\n",
         "elif var % 5==0:\n",
-        "  print(\"Buzz\")"
+        "  print(\"Buzz\")\n",
+        "\n",
+        "else:\n",
+        "  print(var)"
       ]
     }
   ]
