--- a/kadai_014/kadai_014.ipynb
+++ b/kadai_014/kadai_014.ipynb
@@ -16,30 +16,33 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "s_KFv0S8Zwnc",
-        "outputId": "e8812409-4e7c-48c3-d331-d5ffdff12e26"
+        "id": "UK-CLwFzesq7",
+        "outputId": "07dbad79-b1dc-43ce-9828-a61d18419bb5"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1100.0円\n"
+            "330.0\n"
           ]
         }
       ],
       "source": [
-        "def total_product_amount(price,tax):\n",
-        "  total = price + price*(tax/100)\n",
+        "price1 = 100\n",
+        "price2 = 200\n",
+        "tax = 1.1\n",
         "\n",
-        "  print(f\"{total}円\")\n",
+        "def total():\n",
         "\n",
-        "total_product_amount(1000,10)"
+        "    return price1 + price2\n",
+        "\n",
+        "print (total() * tax)\n"
       ]
     }
   ]
