--- a/kadai_013/kadai_013.ipynb
+++ b/kadai_013/kadai_013.ipynb
@@ -16,33 +16,31 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "UK-CLwFzesq7",
-        "outputId": "07dbad79-b1dc-43ce-9828-a61d18419bb5"
+        "id": "s_KFv0S8Zwnc",
+        "outputId": "36f3660a-41ca-4b5d-ccaa-b7d328896472"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "330.0\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
         }
       ],
       "source": [
-        "price1 = 100\n",
-        "price2 = 200\n",
-        "tax = 1.1\n",
+        "def total_product_amount(price,tax):\n",
+        "  return  price + price*(tax/100)\n",
         "\n",
-        "def total():\n",
-        "\n",
-        "    return price1 + price2\n",
-        "\n",
-        "print (total() * tax)\n"
+        "total_product_amount(1000,10)"
       ]
     }
   ]
